# soft-chapter

./: .gitignore  README.md  index.html  vite.config.ts  一期迭代项目汇报.txt
docs/: API_AND_INTERACTION_GUIDE.md
server/: .gitignore  pom.xml
server/kafkakraft-data/: bootstrap.checkpoint  meta.properties
server/python/: extract_video_features.py  pyproject.toml  requirements.txt
server/sql/: init.sql  migrate_add_email.sql  migration_002_message.sql  migration_003_search_history.sql  migration_004_comment_media.sql  migration_005_visitor.sql  migration_006_watch_history.sql  migration_007_recommendation.sql  migration_008_user_profile.sql  migration_009_music.sql  migration_010_carousel.sql  migration_011_visitor_display.sql  migration_012_friend.sql  migration_013_system_notice.sql  migration_014_login_history.sql  migration_015_message_content_text.sql  migration_016_admin_review.sql  migration_016_group_chat.sql  migration_017_goods.sql  migration_018_user_role.sql  migration_019_goods_extras.sql  migration_020_ai_chat.sql  migration_021_shop_message.sql  migration_022_music_review.sql  migration_023_live_room.sql  seed.sql
src/: App.vue  main.ts
src/api/: admin.ts  auth.ts  live.ts  message.ts  music.ts  user.ts  videos.ts
src/components/: AutoInput.vue  AvatarCropper.vue  BaseFooter.vue  BaseMask.vue  BaseMusic.vue  Call.vue  Comment.vue  GroupAvatar.vue  Search.vue  Share.vue  UserPanel.vue
src/config/: index.ts
src/mock/: index.ts
src/router/: index.ts  routes.ts
src/store/: pinia.ts
src/utils/: bus.ts  device.ts  index.tsx  mixin.ts  request.ts  (+1 more)
(+224 files in other folders)
