[project]
name = "douyin-feature-extraction"
version = "1.0.0"
description = "Douyin video content feature extraction pipeline"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.4.0",
    "transformers>=4.46.0",
    "sentence-transformers>=3.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "opencv-python>=4.10.0",
    "ffmpeg-python>=0.2.0",
    "jieba>=0.42.0",
    "Pillow>=10.0.0",
    "httpx>=0.27.0",
]

[tool.uv]
# RTX 4060 8GB + i9-14900
# 首次运行: uv sync
# 如遇 CUDA 问题: uv pip install torch --index-url https://download.pytorch.org/whl/cu121
